{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 40,
  "lineage": "c5a9cb78-d693-033d-51a0-dad656baad64",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf92aee64657649e",
            "arn": "arn:aws:ec2:us-east-1:767398131739:elastic-ip/eipalloc-0cf92aee64657649e",
            "association_id": "eipassoc-04da69233bfc9d6c8",
            "domain": "vpc",
            "id": "eipalloc-0cf92aee64657649e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04f8c6ec9925e705b",
            "private_dns": "ip-20-0-1-6.ec2.internal",
            "private_ip": "20.0.1.6",
            "public_dns": "ec2-18-206-84-202.compute-1.amazonaws.com",
            "public_ip": "18.206.84.202",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.NWI",
            "aws_security_group.sg1",
            "aws_subnet.public-SN-1",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ubuntu-INS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b70fa74e45c3917",
            "arn": "arn:aws:ec2:us-east-1:767398131739:instance/i-0786cb53e39fc06c8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0786cb53e39fc06c8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins-key-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08b9ec60d351c157a",
            "private_dns": "ip-20-0-1-253.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.1.253",
            "public_ip": "18.232.146.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05457628d977b5844",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a276c80ff5d84c1d",
            "tags": {
              "Name": "Ubuntu-INS-1"
            },
            "tags_all": {
              "Name": "Ubuntu-INS-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa256d7d73feae91"
            ]
          },
          "dependencies": [
            "aws_security_group.sg1",
            "aws_subnet.public-SN-1",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398131739:internet-gateway/igw-0530d561778d21ac5",
            "id": "igw-0530d561778d21ac5",
            "owner_id": "767398131739",
            "vpc_id": "vpc-0ca811d6b4ed93626"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "NWI",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398131739:network-interface/eni-04f8c6ec9925e705b",
            "id": "eni-04f8c6ec9925e705b",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:49:8c:dc:7d:f7",
            "owner_id": "767398131739",
            "private_ip": "20.0.1.6",
            "private_ip_list": [
              "20.0.1.6"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "20.0.1.6"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0fa256d7d73feae91"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a276c80ff5d84c1d",
            "tags": {
              "Name": "NW-INTERFACE"
            },
            "tags_all": {
              "Name": "NW-INTERFACE"
            }
          },
          "dependencies": [
            "aws_security_group.sg1",
            "aws_subnet.public-SN-1",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Custum",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398131739:route-table/rtb-0611f92a14a654436",
            "id": "rtb-0611f92a14a654436",
            "owner_id": "767398131739",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0530d561778d21ac5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT"
            },
            "tags_all": {
              "Name": "Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca811d6b4ed93626"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGway",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0124e8176219f8b8b",
            "route_table_id": "rtb-0611f92a14a654436",
            "subnet_id": "subnet-0a276c80ff5d84c1d"
          },
          "dependencies": [
            "aws_internet_gateway.IGway",
            "aws_route_table.Custum",
            "aws_subnet.public-SN-1",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b309e60db39846f9",
            "route_table_id": "rtb-0611f92a14a654436",
            "subnet_id": "subnet-04a8699109a62a730"
          },
          "dependencies": [
            "aws_internet_gateway.IGway",
            "aws_route_table.Custum",
            "aws_subnet.public-SN-2",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398131739:security-group/sg-0fa256d7d73feae91",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa256d7d73feae91",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240605095126209100000001",
            "name_prefix": "terraform-",
            "owner_id": "767398131739",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-1"
            },
            "tags_all": {
              "Name": "SG-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca811d6b4ed93626"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PRIVATE-SN-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398131739:subnet/subnet-0a05b75200bde7586",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "20.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a05b75200bde7586",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398131739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRIVATE-SN-1"
            },
            "tags_all": {
              "Name": "PRIVATE-SN-1"
            },
            "vpc_id": "vpc-0ca811d6b4ed93626"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PRIVATE-SN-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398131739:subnet/subnet-0a5c7ff14f4424bf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "20.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5c7ff14f4424bf0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398131739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRIVATE-SN-2"
            },
            "tags_all": {
              "Name": "PRIVATE-SN-2"
            },
            "vpc_id": "vpc-0ca811d6b4ed93626"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-SN-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398131739:subnet/subnet-0a276c80ff5d84c1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "20.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a276c80ff5d84c1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767398131739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PUB-Subnet-1"
            },
            "tags_all": {
              "Name": "PUB-Subnet-1"
            },
            "vpc_id": "vpc-0ca811d6b4ed93626"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-SN-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398131739:subnet/subnet-04a8699109a62a730",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "20.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a8699109a62a730",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767398131739",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PUB-Subnet-2"
            },
            "tags_all": {
              "Name": "PUB-Subnet-2"
            },
            "vpc_id": "vpc-0ca811d6b4ed93626"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398131739:vpc/vpc-0ca811d6b4ed93626",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-02d9c79b37d104aae",
            "default_route_table_id": "rtb-00da5000297162d16",
            "default_security_group_id": "sg-0398f6b48b2d5a23e",
            "dhcp_options_id": "dopt-04623429c5392ff73",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ca811d6b4ed93626",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00da5000297162d16",
            "owner_id": "767398131739",
            "tags": {
              "Name": "VPC-ARCH-02"
            },
            "tags_all": {
              "Name": "VPC-ARCH-02"
            }
          }
        }
      ]
    }
  ]
}